fixed margin on mobile

--- a/resources/css/sub-container.css
+++ b/resources/css/sub-container.css
@@ -4,7 +4,7 @@
 
 
 .sub-container{
-    padding-top: 80px;
+    padding-top: 150px;
 }
 
 
